<resources>
    <string name="app_name">sail</string>
    <string name="logout">ログアウト</string>
    <string name="logo">sailロゴ</string>
    <string name="rox_logo">rox_logo</string>
    <string name="to_edit">客数の入力</string>
    <string name="to_check">客数の確認</string>
    <string name="to_settings">定休日・地域</string>
    <string name="to_info">ヘルプ・情報</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">ID</string>
    <string name="prompt_password">パスワード</string>
    <string name="action_sign_in">ログイン</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="content_description_end_icon">"eye_icon"</string>
</resources>